--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Inventory Login</title>
+    <title>Inventory Loginnn</title>
     <link rel="icon" type="image/x-icon" href="./images/skunk_logo.png" />
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
